--- a/notifications/overlays/development/secrets/kustomization.yaml
+++ b/notifications/overlays/development/secrets/kustomization.yaml
@@ -1,6 +1,6 @@
 ---
 namespace: test-fleet
-namePrefix: notification-api-
+namePrefix: test-fleet-
 
 generatorOptions:
   disableNameSuffixHash: true
